p2/confs/app3.yaml
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
    - port: 80
      targetPort: 8080

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
